# src/app/core/api/index.ts
@@ -75,6 +75,7 @@ export {
   postApiAdminPayoutsByPayoutIdStatus,
   postApiAdminSellerApplicationsByUserIdApprove,
   postApiAdminSellerApplicationsByUserIdReject,
+  postApiAuthChangePassword,
   postApiAuthExternalByProvider,
   postApiAuthForgotPassword,
   postApiAuthLogin,
@@ -147,6 +148,7 @@ export type {
   CartResponse,
   CategoryDetailResponse,
   CategoryResponse,
+  ChangePasswordRequest,
   ClientOptions,
   CreateCategoryRequest,
   CreateDocumentReportRequest,
@@ -476,6 +478,11 @@ export type {
   PostApiAdminSellerApplicationsByUserIdRejectErrors,
   PostApiAdminSellerApplicationsByUserIdRejectResponse,
   PostApiAdminSellerApplicationsByUserIdRejectResponses,
+  PostApiAuthChangePasswordData,
+  PostApiAuthChangePasswordError,
+  PostApiAuthChangePasswordErrors,
+  PostApiAuthChangePasswordResponse,
+  PostApiAuthChangePasswordResponses,
   PostApiAuthExternalByProviderData,
   PostApiAuthExternalByProviderError,
   PostApiAuthExternalByProviderErrors,
